chore: baseline concurrent updates before trace split closeout